# python-web-demo

./: .gitignore  .pdm-python  pyproject.toml  readme.md
fastAPI/: 1基本程序.py  2两个路径.py  3get请求传参.py  4post请求.py  5重定向.py
gradio/: 10下拉选择框.py  11State.py  12链接跳转.py  1基本代码.py  2多输入输出程序.py  3图像组件.py  4简易计算器.py  5程序标题与表格等.py  6聊天窗口.py  7基础的block应用.py  8Tab与Row等布局组件.py  9组件隐藏.py  gradio文档教程.txt  try.py
gradio/flagged/: log.csv
gradio_in_fastAPI/: 1基本集成.py  2外部登陆.py
streamlit/: app.py
streamlit/docs/: 2026-01.md
streamlit/pages/: chatbot.py  docs.py  jupyter.py  photo.py
