[project]
name = "python-web-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhangli", email = "2693175110@qq.com"},
]
dependencies = ["streamlit>=1.53.1", "pyarrow==15.0.2", "fastapi==0.112.4", "gradio==4.29.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false